[gd_scene load_steps=10 format=3 uid="uid://cvucsomlv5icc"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_xgkbw"]
[ext_resource type="Texture2D" uid="uid://bugbc622yhpbk" path="res://VisualAssets/Gear Icon.png" id="2_v4cne"]
[ext_resource type="PackedScene" uid="uid://bslhm61h8k5hp" path="res://VisualAssets/CloseButton.tscn" id="3_4iscq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rum38"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyl5g"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vnahc"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1xh2"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrvih"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gf7xb"]
bg_color = Color(0.724643, 0.724643, 0.724642, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgkbw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.187177, 0.187176, 0.187176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -20
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_italics_font_size = 72
bbcode_enabled = true
text = "[center][color=#dcdcdc][b][i]WORLD'S CHEAPEST FRETBOARD TRAINER![/i][/b][/color][/center]
"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 45

[node name="Guitar" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_rum38")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nyl5g")
theme_override_styles/normal = SubResource("StyleBoxFlat_vnahc")
text = " Guitar "

[node name="Bass" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_d1xh2")
theme_override_styles/hover = SubResource("StyleBoxFlat_xrvih")
theme_override_styles/normal = SubResource("StyleBoxFlat_gf7xb")
text = "  Bass  "

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 712.0
offset_bottom = 712.0
scale = Vector2(0.15, 0.15)
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Options" type="Button" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_rum38")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nyl5g")
theme_override_styles/normal = SubResource("StyleBoxFlat_vnahc")
icon = ExtResource("2_v4cne")

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_right = 604.0
offset_bottom = 712.0
grow_horizontal = 0
scale = Vector2(0.15, 0.15)
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="CloseButton" parent="CanvasLayer/MarginContainer2" instance=ExtResource("3_4iscq")]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Guitar" to="." method="_on_guitar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Bass" to="." method="_on_bass_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Options" to="." method="_on_options_pressed"]
